--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  font_awesome_flutter : ^10.1.0
+  http : ^0.13.5
   flutter_rating_bar: ^4.0.1
   intl: ^0.17.0
   firebase_core_platform_interface: 4.5.1
@@ -44,6 +46,8 @@ dependencies:
   cloud_firestore: ^3.5.1
 
 dev_dependencies:
+  build_runner : ^2.2.0
+  hive_generator: ^1.1.3
   flutter_test:
     sdk: flutter
 
